--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 2,
-  "version": "1.3.1",
+  "version": "1.4",
   "name": "Dark Violet",
   "theme": {
     "images": {
@@ -43,7 +43,8 @@
 		"tab_selected": "rgb(48, 48, 48)",
 		"tab_text": "rgb(145, 71, 255)",
 		"toolbar_field_border": "rgb(23, 23, 23)",
-		"toolbar_top_separator": "rgb(23, 23, 23)"
+		"toolbar_top_separator": "rgb(23, 23, 23)",
+		"popup_border": "rgb(35, 35, 35)"
     }
   }
 }
